--- a/src/app/components/busqueda/busqueda.component.html
+++ b/src/app/components/busqueda/busqueda.component.html
@@ -10,17 +10,5 @@
 </div>
 
 <div class="card-columns">
-
-  <div class="card animated fadeIn fast" *ngFor="let heroe of heroes, let i = index">
-    <img [src]="heroe.img" class="card-img-top " [alt]="heroe.nombre">
-    <div class="card-body">
-      <h5 class="card-title">{{ heroe.nombre }}</h5>
-      <p class="card-text">{{ heroe.bio }}</p>
-      <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
-
-      <button (click)="heroe.verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">Ver mas...</button>
-      <!--<a [routerLink]="['/heroe', i]" class="btn btn-outline-primary">Ver mas link....</a>-->
-
-    </div>
-  </div>
+  <app-heroe-tarjeta [heroe]="h" [index]="h.idx" *ngFor="let h of heroes"></app-heroe-tarjeta>
 </div>
